# programacion-inteligencia-artificial

./: .gitignore  DECISIONES_MATERIAL_ARCHIVADO.md  README.md  mkdocs.yml
01-fundamentos-python/: README.md
01-fundamentos-python/01-teoria/: 02-python-esencial-variables-texto-imports.md  03-python-esencial-control-funciones-patrones.md  04-estructuras-datos-basicas-practica.md  04_bis-Estructuras_datos_adicionales.md  05-guia-semana-2-numpy-jax.md  07-broadcasting-numpy.md  07b-broadcasting-numpy-infografia.md  10-ejercicios_numpy-tests.md  10-ejercicios_numpy.md  README.md  UD1-Doc.md  (+2 more)
02-tratamiento-datos/: README.md
03-machine-learning/: README.md
03-machine-learning/03-practicas/laboratorios/Lab1/mi_dataset_peliculas/: README.md  pyproject.toml
03-machine-learning/03-practicas/laboratorios/Lab1/mi_dataset_peliculas/src/: experiment_MoviesDataSet.ipynb
03-machine-learning/03-practicas/laboratorios/Lab1/mi_dataset_peliculas/src/mi_dataset_peliculas/: build_dataset.py  config.py  merge.py  omdb.py  tmdb.py
04-deep-learning/: README.md
05-cloud-mlops/: README.md
06-llm-agentes/: README.md
07-convergencia-herramientas/: README.md
08-vision-xai/: README.md
09-gpu-avanzado/: README.md
10-series-temporales/: README.md
11-anexos/: README.md
12-proyecto-integrado/: README.md
docs/: 01-fundamentos-python  02-tratamiento-datos  03-machine-learning  04-deep-learning  05-cloud-mlops  06-llm-agentes  07-convergencia-herramientas  08-vision-xai  09-gpu-avanzado  10-series-temporales  11-anexos  12-proyecto-integrado  index.md
hooks/: nav_generator.py
(+690 files in other folders)
